# Rust-backend-frontend

./: README.md
NotesApp/frontend/: package-lock.json  package.json
NotesApp/frontend/src/: App.tsx
NotesApp/frontend/src/api/: noteApi.ts  types.ts
NotesApp/frontend/src/components/: note.modal.tsx
NotesApp/frontend/src/components/notes/: create.note.tsx  note.component.tsx  update.note.tsx
NotesApp/rust_note_backend/: .env  Cargo.toml  README.md  api.http
NotesApp/rust_note_backend/src/: handler.rs  main.rs  route.rs
TodoApp/rust_todo_backend/: Cargo.toml  api.http
TodoApp/rust_todo_backend/migrations/: 20250909160805_create_todos_table.down.sql  20250909160805_create_todos_table.up.sql
TodoApp/rust_todo_backend/src/: auth.rs  config.rs  handler.rs  main.rs  middleware.rs  model.rs  route.rs  schema.rs
